--- a/vsmuplus/src/app/tab1/tab1.page.html
+++ b/vsmuplus/src/app/tab1/tab1.page.html
@@ -1,11 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      VSMU<sup>+</sup>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h1>HOME PAGE</h1>
+  <a routerLink="/post">HOME PAGE</a>
 </ion-content>
