upd: upd tabber

--- a/vsmuplus/src/app/tab1/tab1.page.html
+++ b/vsmuplus/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      VSMU<sup>+</sup>
-    </ion-title>
+    <ion-title>Лента</ion-title>
   </ion-toolbar>
 </ion-header>
 
