feat: tab2 content

--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+ <a routerLink="/post"><h1>Post</h1></a>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
