--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,12 +1,74 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="false">
+    <ion-toolbar>
+        <ion-title>Лента</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
- <a routerLink="/post"><h1>Post</h1></a>
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-menu side="start" menuId="cat" contentId="home">
+    <ion-content>
+        <ion-list style="margin-top: 3rem;">
+            <ion-item>Все категории</ion-item>
+            <ion-item>Студенческая жизнь</ion-item>
+            <ion-item>Наука</ion-item>
+            <ion-item>Мероприятия</ion-item>
+            <ion-item>Спорт</ion-item>
+            <ion-item>Общежития</ion-item>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-content [fullscreen]="true" id="home" force-overscroll='false'>
+    <ion-refresher style="z-index: 100 !important;" slot="fixed" id="refresher" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Лента</ion-title>
+            <ion-buttons slot="end">
+                <ion-menu-button id="custom-cat-menu-icon" (click)="showCatMenu()" size='large' autoHide="false"></ion-menu-button>
+            </ion-buttons>
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-card routerLink="/post">
+        <img src="https://ionicframework.com/docs/demos/api/card/madison.jpg" />
+        <ion-card-header>
+            <ion-card-subtitle>мероприятия</ion-card-subtitle>
+            <ion-card-title>Идет набор в секцию по американскому футболу</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-icon name="at-outline"></ion-icon>
+            <ion-label>
+                БРСМ
+            </ion-label>
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card routerLink="/post">
+        <img src="https://ionicframework.com/docs/demos/api/card/madison.jpg" />
+        <ion-card-header>
+            <ion-card-subtitle>мероприятия</ion-card-subtitle>
+            <ion-card-title>Идет набор в секцию по американскому футболу</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-icon name="at-outline"></ion-icon>
+            <ion-label>
+                БРСМ
+            </ion-label>
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card routerLink="/post">
+        <img src="https://ionicframework.com/docs/demos/api/card/madison.jpg" />
+        <ion-card-header>
+            <ion-card-subtitle>мероприятия</ion-card-subtitle>
+            <ion-card-title>Идет набор в секцию по американскому футболу</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-icon name="at-outline"></ion-icon>
+            <ion-label>
+                БРСМ
+            </ion-label>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
