--- a/myApp/src/app/tab3/tab3.page.html
+++ b/myApp/src/app/tab3/tab3.page.html
@@ -1,17 +1,73 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Афиша
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Афиша</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+
+    <ion-list>
+        <ion-list-header>10 августа</ion-list-header>
+        <ion-item>
+            <ion-row style="width: 100%;">
+                <ion-col size="2" class="ev-date">
+                    11:00 <br> 13:00
+                </ion-col>
+                <ion-col size="10" class="ev-name">
+                    ВГМУ Притяние Военной присяги студентами ВГМУ
+                </ion-col>
+            </ion-row>
+        </ion-item>
+        <ion-item>
+            <ion-row style="width: 100%;">
+                <ion-col size="2" class="ev-date">
+                    11:00 <br> 13:00
+                </ion-col>
+                <ion-col size="10" class="ev-name">
+                    ВГМУ Притяние Военной присяги студентами ВГМУ
+                </ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-list>
+    <ion-list>
+        <ion-list-header>11 августа</ion-list-header>
+        <ion-item>
+            <ion-row style="width: 100%;">
+                <ion-col size="2" class="ev-date">
+                    11:00 <br> 13:00
+                </ion-col>
+                <ion-col size="10" class="ev-name">
+                    ВГМУ Притяние Военной присяги студентами ВГМУ
+                </ion-col>
+            </ion-row>
+        </ion-item>
+        <ion-item>
+            <ion-row style="width: 100%;">
+                <ion-col size="2" class="ev-date">
+                    11:00 <br> 13:00
+                </ion-col>
+                <ion-col size="10" class="ev-name">
+                    ВГМУ Притяние Военной присяги студентами ВГМУ
+                </ion-col>
+            </ion-row>
+        </ion-item>
+        <ion-item>
+            <ion-row style="width: 100%;">
+                <ion-col size="2" class="ev-date">
+                    11:00 <br> 13:00
+                </ion-col>
+                <ion-col size="10" class="ev-name">
+                    ВГМУ Притяние Военной присяги студентами ВГМУ
+                </ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-list>
 </ion-content>
