--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -18,9 +18,6 @@
 </ion-menu>
 
 <ion-content [fullscreen]="true" id="home" force-overscroll='false'>
-    <ion-refresher style="z-index: 100 !important;" slot="fixed" id="refresher" (ionRefresh)="doRefresh($event)">
-        <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
     <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large">Лента</ion-title>
@@ -29,14 +26,12 @@
             </ion-buttons>
         </ion-toolbar>
     </ion-header>
-    <ion-virtual-scroll [items]="itemss" approxItemHeight="320px">
+    <ion-virtual-scroll [items]="(ideas | async)" approxItemHeight="320px">
         <ion-card *virtualItem="let item; let itemBounds = bounds;" routerLink="/post">
             <ion-card-header>
-                <ion-card-title>{{ item }}</ion-card-title>
+                <ion-card-title>{{ item.name }}</ion-card-title>
             </ion-card-header>
-            <ion-card-content>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores deleniti, porro, tenetur, reprehenderit praesentium facere nesciunt adipisci dolor fuga ipsum aliquid repellendus. Quas commodi similique voluptatibus rerum ea, voluptatem
-                accusamus.
-            </ion-card-content>
+            <ion-card-content>{{ item.text }}</ion-card-content>
         </ion-card>
-    </ion-virtual-scroll>
+    </ion-virtual-scroll><br>
 </ion-content>
