--- a/myApp/src/app/tab1/tab1.page.scss
+++ b/myApp/src/app/tab1/tab1.page.scss
@@ -17,3 +17,7 @@
         ion-card-title {
             font-size: 1.5rem;
         }
+        
+        ion-virtual-scroll {
+            transition: .4s !important;
+        }
