fix: background upload content

--- a/myApp/src/app/tab1/tab1.page.scss
+++ b/myApp/src/app/tab1/tab1.page.scss
@@ -21,3 +21,7 @@
         ion-virtual-scroll {
             transition: .4s !important;
         }
+        
+        ion-refresher {
+            z-index: 10;
+        }
