--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
     </ion-content>
 </ion-menu>
 
-<ion-content [fullscreen]="true" id="home" force-overscroll='false'>
+<ion-content [scrollEvents]="true" (ionScroll)="logScrolling($event)" [fullscreen]="true" id="home" force-overscroll='false'>
     <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large">Лента</ion-title>
@@ -26,7 +26,7 @@
             </ion-buttons>
         </ion-toolbar>
     </ion-header>
-    <ion-virtual-scroll [items]="(ideas | async)" approxItemHeight="320px">
+    <ion-virtual-scroll id="lenta-ion-virtual-scroll" [items]="(posts)" approxItemHeight="320px">
         <ion-card *virtualItem="let item; let itemBounds = bounds;" routerLink="/post">
             <ion-card-header>
                 <ion-card-title>{{ item.name }}</ion-card-title>
