fix: dell trash functions

--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
     </ion-content>
 </ion-menu>
 
-<ion-content [scrollEvents]="true" (ionScroll)="logScrolling($event)" [fullscreen]="true" id="home" force-overscroll='true' #pageTop>
+<ion-content [fullscreen]="true" id="home" force-overscroll='true' #pageTop>
     <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large">Лента</ion-title>
