feat: change categories

--- a/myApp/src/global.scss
+++ b/myApp/src/global.scss
@@ -38,3 +38,8 @@ ion-card {
 ion-content {
     pointer-events: auto;
 }
+
+.custom-cat-menu-icon {
+    margin-bottom: 0.2rem;
+    margin-right: 0.4rem;
+}
