--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,33 +1,33 @@
 <ion-header [translucent]="false">
     <ion-toolbar>
-        <ion-title>Лента</ion-title>
+
     </ion-toolbar>
 </ion-header>
 
-<ion-menu side="start" menuId="cat" contentId="home">
+<ion-menu side="start" menuId="categories" contentId="home">
     <ion-content>
         <ion-list style="margin-top: 3rem;">
-            <ion-item>Все категории</ion-item>
-            <ion-item>Студенческая жизнь</ion-item>
-            <ion-item>Наука</ion-item>
-            <ion-item>Мероприятия</ion-item>
-            <ion-item>Спорт</ion-item>
-            <ion-item>Общежития</ion-item>
+            <ion-item (click)="changeCategory('all')">Все категории</ion-item>
+            <ion-item (click)="changeCategory('stud-life')">Студенческая жизнь</ion-item>
+            <ion-item (click)="changeCategory('since')">Наука</ion-item>
+            <ion-item (click)="changeCategory('events')">Мероприятия</ion-item>
+            <ion-item (click)="changeCategory('sport')">Спорт</ion-item>
+            <ion-item (click)="changeCategory('homes')">Общежития</ion-item>
         </ion-list>
     </ion-content>
 </ion-menu>
 
-<ion-content [fullscreen]="true" id="home" force-overscroll='true' #pageTop>
+<ion-content [scrollEvents]="true" (ionScroll)="logScrolling($event)" [fullscreen]="true" id="home" force-overscroll='true' #pageTop>
     <ion-header collapse="condense">
         <ion-toolbar>
-            <ion-title size="large">Лента</ion-title>
+            <ion-title size="large">{{ currentCategory }}</ion-title>
             <ion-buttons slot="end">
-                <ion-menu-button id="custom-cat-menu-icon" (click)="showCatMenu()" size='large' autoHide="false"></ion-menu-button>
+                <ion-menu-button class="custom-cat-menu-icon" (click)="showCatMenu()" size='large' autoHide="false"></ion-menu-button>
             </ion-buttons>
         </ion-toolbar>
     </ion-header>
     <ion-virtual-scroll id="lenta-ion-virtual-scroll" [items]="(posts)" approxItemHeight="320px">
-        <ion-card *virtualItem="let item; let itemBounds = bounds;" routerLink="/post">
+        <ion-card style="height: 300px !important;" *virtualItem="let item; let itemBounds = bounds;" routerLink="/post">
             <ion-card-header>
                 <ion-card-title>{{ item.name }}</ion-card-title>
             </ion-card-header>
