--- a/myApp/src/global.scss
+++ b/myApp/src/global.scss
@@ -43,3 +43,8 @@ ion-content {
     margin-bottom: 0.2rem;
     margin-right: 0.4rem;
 }
+
+ion-thumbnail {
+    height: 200px;
+    width: 100%;
+}
