fix: since => sience

--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
         <ion-list style="margin-top: 3rem;">
             <ion-item (click)="changeCategory('all')">Все категории</ion-item>
             <ion-item (click)="changeCategory('stud-life')">Студенческая жизнь</ion-item>
-            <ion-item (click)="changeCategory('since')">Наука</ion-item>
+            <ion-item (click)="changeCategory('sience')">Наука</ion-item>
             <ion-item (click)="changeCategory('events')">Мероприятия</ion-item>
             <ion-item (click)="changeCategory('sport')">Спорт</ion-item>
             <ion-item (click)="changeCategory('homes')">Общежития</ion-item>
